--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,22 +8,26 @@
    
 
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-MTGXDSK');</script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GKTR56CD2Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GKTR56CD2Y');
+</script>
   <!-- End Google Tag Manager -->
 
       <!-- FB -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://app.littlebabydoge.com" />
+    <meta property="og:url" content="https://BabyDogeDEFI.io" />
     <meta property="og:title" content="littlebabydoge | Little Baby Doge">
 
     <!-- TW -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://app.littlebabydoge.com">
-    <meta name="twitter:title" content="littlebabydoge | Little Baby Doge">
+    <meta name="twitter:url" content="https://BabyDogeDEFI.io">
+    <meta name="twitter:title" content="BabyDoge DEFI | Stake BabyDoge">
     <meta name="msapplication-TileColor" content="#56e0c2">
     <meta http-equiv="Content-Language" content="es" />
     <meta name="distribution" content="global" />
@@ -36,7 +40,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="littlebabydoge | Little Baby Doge" />
+    <meta name="description" content="BabyDoge DEFI | Stake BabyDoge" />
     <title>Baby</title>
   </head>
   <body>
@@ -55,8 +59,7 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
         <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MTGXDSK"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
     <link rel="stylesheet" type="text/css" href="path/to/react-notifications/dist/react-notifications.css">
   </body>
 </html>
